--- a/src/assets/styles/components/_inlinelogo.scss
+++ b/src/assets/styles/components/_inlinelogo.scss
@@ -7,7 +7,6 @@
       display: block;
       width: 3rem;
       height: auto;
-      overflow: visible;
 
       .logo__trace path,
       .logo__hover path {
